welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: not found: value length
	var tab = new Array[Int] (length)
                                  ^indexOfValue:3: error: not found: value length
	for (i <-0 to length-1) {
                      ^